[package]
name = "harsh"
version = "0.2.0"
edition = "2018"
description = "Hashids implementation for Rust"
readme = "README.md"
repository = "https://github.com/archer884/harsh"
license = "MIT/Apache-2.0"
authors = ["J/A <archer884@gmail.com>"]
exclude = [".travis.yml"]
keywords = ["hashids"]
categories = ["encoding", "value-formatting", "web-programming"]

[dependencies]

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"

[[bench]]
name = "benchmarks"
harness = false
